# sandbox

./: .gitignore  .gitmodules  MQTT Communication Specs.md  README.md  application.py  package-lock.json  package.json  start_sandbox.sh
SandboxVisual/: export_presets.cfg  project.godot
SandboxVisual/Assets/: SMT_Factory_Layout.png.import  Stacker.svg.import  favicon.png.import
SandboxVisual/Assets/Access Control/Icons/: close.svg.import  exclamation_triangle.svg.import  fast_forward.svg.import  id_badge.svg.import  laugh.svg.import  parking.svg.import  sign_out_alt.svg.import  wifi.svg.import
SandboxVisual/Assets/Access Control/Style Boxes/: building_room_flat.tres
SandboxVisual/Assets/AccessControl/Icons/: close.svg.import  exclamation_triangle.svg.import  fast_forward.svg.import  id_badge.svg.import  laugh.svg.import  parking.svg.import  sign_out_alt.svg.import  wifi.svg.import
SandboxVisual/Assets/AccessControl/StyleBoxes/: building_flat.tres  building_room_flat.tres  error_panel_flat.tres  header_panel_flat.tres  person_panel_flat.tres  schedule_panel_flat.tres
SandboxVisual/Assets/Factory/: smt_factory_layout.png.import
SandboxVisual/Assets/Factory/Robots/: bumblebee.svg.import  stacker.svg.import
SandboxVisual/Assets/Factory/StyleBoxes/: area_action_popup_flat.tres  area_flat.tres  pallet_flat.tres  simulation_controller_flat.tres  stop_point_flat.tres
SandboxVisual/Assets/Factory/Widget/: widget_base.svg.import  widget_label.svg.import  widget_progress.svg.import
SandboxVisual/Assets/Factory/WidgetStates/: base_widget.svg.import
SandboxVisual/Assets/Fonts/: roboto_light_big.tres  roboto_light_med.tres  roboto_regular.tres  roboto_regular_button.tres
SandboxVisual/Assets/Fonts/Lato/: lato_regular.tres
SandboxVisual/Assets/Fonts/Montserrat/: montserrat_regular_big_df.tres  montserrat_regular_med_df.tres
SandboxVisual/Assets/Fonts/Open Sans/: open_sans_regular_df.tres
SandboxVisual/Assets/Fonts/OpenSans/: open_sans_regular_df.tres
SandboxVisual/Assets/Fonts/Roboto/: roboto_light_big.tres  roboto_light_med.tres  roboto_regular.tres
SandboxVisual/Labs/: sample_json.tres  sample_json_2.tres  sample_json_3.tres
SandboxVisual/Objects/: stacker.tscn
SandboxVisual/Objects/Access Control/: building.tscn  building_room.tscn  person.tscn  person_options_panel.tscn  schedule_item_label.tscn  schedule_list_panel.tscn  schedule_panel.tscn  ui_button.tscn
SandboxVisual/Objects/AccessControl/: building.tscn  building_room.tscn  event_label.tscn  person.tscn  person_options_panel.tscn  schedule_item_label.tscn  schedule_panel.tscn  ui_button.tscn
SandboxVisual/Objects/Factory Robots/: bumblebee.tscn
SandboxVisual/Objects/Factory/FactoryComponents/: PathContainer.tscn  area.tscn  floor_path.tscn  pallet.tscn  simulation_controller.tscn  stop_point.tscn  waypoint.tscn  widget_grid.tscn
SandboxVisual/Objects/Factory/Movables/: pallet.tscn  palletbot.tscn  widget.tscn  widgetbot.tscn
SandboxVisual/Objects/Factory/Robots/: bumblebee.tscn  palletbot.tscn  stacker.tscn  widgetbot.tscn
SandboxVisual/Objects/SBDL/: angular_machine.tscn  rectangular_machine.tscn
SandboxVisual/Objects/UI/: general_button.tscn
SandboxVisual/Scenes/: access_control.tscn  scene_picker.tscn  single_bot_movement.tscn
SandboxVisual/Scenes/Access Control/: hq_building.tscn
SandboxVisual/Scenes/AccessControl/: access_control_building.tscn  hq_building.tscn
SandboxVisual/Scenes/Factory/: amr_swarm_factory.tscn  basic_factory.tscn  farobot_3_tasks.tscn  farobot_5_tasks.tscn  scenario_1_factory.tscn  single_bot_movement.tscn
SandboxVisual/Scenes/SBDL/: static_scenario.tscn
SandboxVisual/Scripts/: scene_picker.gd
SandboxVisual/Scripts/Access Control/UI/: button_style_controller.gd
SandboxVisual/Scripts/AccessControl/: access_control_building.gd  building.gd  building_room.gd  person.gd
SandboxVisual/Scripts/AccessControl/UI/: building_room.gd  button_style_controller.gd  error_panel.gd  event.gd  person_options_panel.gd  schedule_panel.gd  time_header.gd
SandboxVisual/Scripts/Bots/: bot_controller.gd
SandboxVisual/Scripts/Communications/: communication_manager.gd
SandboxVisual/Scripts/Factory/Bots/: bot_controller.gd
SandboxVisual/Scripts/Factory/Factories/: amr_swarm_factory.gd  (+3 more)
SandboxVisual/Scripts/Models/: time.gd
SandboxVisual/Scripts/Navigation/: location_based_nav.gd
WarehouseDemo/: project.godot
WarehouseDemo/Assets/: Bot.svg.import
WarehouseDemo/Objects/: Bot.tscn  Bumblebee.tscn  Stacker.tscn
WarehouseDemo/Scenes/: SOW_Factory.tscn  single_bot_movement.tscn
WarehouseDemo/Scripts/Bots/: BotController.gd  BotMovementController.gd
WarehouseDemo/Scripts/Communications/: communication_manager.gd  mqtt_bundle.tres
WarehouseDemo/Scripts/Factories/: smt_factory_meta.gd
WarehouseDemo/Scripts/Navigation/: FactoryNav.gd  location_based_nav.gd
Website/: package-lock.json  package.json  sandbox.py  start_sandbox.sh  webpack.config.js
Website/static/js/: main.js  mqtt.js  mqtt_bundle.js
Website/static/visual/: index.html  index.pck
Website/templates/: index.html
agent/: .gitignore  Dockerfile  README.md  agent.js  build.sh  docker_build.sh  docker_run.sh  package-lock.json  package.json  push-to-aws.sh  run.sh
coordinator/: .gitignore  CMakeLists.txt  README.md  coordinator.cpp  coordinator.ddl  coordinator.ruleset
coordinator/include/: enums.hpp  metrics.hpp  metrics_publisher.hpp  utils.hpp
coordinator/src/: coordinator.cpp  coordinator.ddl  coordinator.ruleset  enums.cpp  metrics.cpp  metrics_publisher.cpp  utils.cpp
static/css/: pirate.css  style.css
static/img/: favicon.xcf
static/img/pirate/: merchant.xcf  navy.xcf  pirate.xcf  port.xcf
static/js/: access_control.js  main.js  mqtt.js  pirates.js  tour.js
static/visual/: index.html  index.pck  tutorial.html
templates/: index.html  pirates.html
ui/static/css/: style.css
ui/static/js/: access_control.js
ui/templates/: index.html
(+17 files in other folders)
